# spiderplot

./: .gitignore  LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg
examples/: climate_data.csv  commons.py  example1.py  example2.py  example3.py  example4.py  run_all.py
spider_chart/: _spider.py
spiderplot/: __init__.py  _demo.py  _spider.py
