# NOTE: Multi-line configs break the meta-data read-out!
# https://github.com/pypa/setuptools/issues/1390
[metadata]
name = spiderplot
version = file: VERSION
url = https://github.com/hirsch-lab/spiderplot
license = MIT
license_file = LICENSE
description = Seaborn-style utility to plot spider charts
long_description = file: README.md
long_description_content_type = text/markdown
author = Norman Juchler
keywords = spider chart, plotting
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Utilities
    Intended Audience :: Developers
    Intended Audience :: Science/Research

[options]
packages = find:
setup_requires = setuptools>=38.3.0
python_requires = >=3.6
